# MusicApp

./: README.md  makefile  tree
.github/workflows/: .readthedocs.yaml  cmake-multi-platform.yml
MusicApp/DEBIAN/: control  prerm
MusicApp/usr/share/applications/: musicapp.desktop
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle
android/app/src/androidTest/java/com/vava/mapp/: MainActivityTest.kt
android/app/src/main/java/com/vava/mapp/: AudioManager.kt  EffectsManager.kt  MainActivity.kt
android/app/src/main/res/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/vava/mapp/: AudioManagerTest.kt  EffectsManagerTest.kt
backend/: audio_manager.cpp  audio_manager.h  effects_manager.cpp  effects_manager.h
build-windows/: CMakeLists.txt
docs/: custom.css
gui/: audio_controls.cpp  audio_controls.h  effects_controls.cpp  main_window.cpp  network_controls.cpp  settings_controls.cpp  settings_controls.h
platform/linux/: CMakeLists.txt  audio_controls.cpp  audio_manager.h  audio_server_cli.cpp  effects_controls.cpp  effects_controls.h  main_window.cpp  main_window.h  network_controls.cpp  network_controls.h  pulse_pipe_wrapper.cpp  pulse_pipe_wrapper.h  pulse_pipe_wrapper_test.cpp  server_manager.cpp  server_manager.h  settings_controls.cpp  settings_controls.h  utils.cpp  utils.h
platform/linux/backend/: audio_manager.cpp  audio_manager.h  effects_manager.cpp  effects_manager.h  server_manager.cpp  server_manager.h
platform/linux/gui/: effects_contols.h  effects_controls.cpp  main_window.cpp  main_window.h  settings_contols.h  settings_controls.cpp
platform/linux/theme/: dark_theme.css  light_theme.css
platform/windows/: install_script.nsi
platform/windows/backend/: server_manager.cpp  server_manager.h
platform/windows/gui/: main_window.cpp  main_window.h
scripts/: build_linux.sh  install_dependencies.sh
translations/: ar.po  be.po  de.po  en.po  es.po  fr.po  it.po  jp.po  nl.po  zh.po
